--- a/srcs/nginx/srcs/nginx.conf
+++ b/srcs/nginx/srcs/nginx.conf
@@ -8,7 +8,7 @@ http {
     include                     /etc/nginx/mime.types;
     # Defines the default type
     default_type                application/octet-stream;
-    # Sendfile copies data between one FD and other from within the kernel, which it's more efficient than read() + write()
+    # Sendfile copies data between one FD and other from within the kernel, wich ir more efficient than read() + write()
     sendfile                    on;
     # Timeout for keep-alive connections. Server will close connections after this time
     keepalive_timeout           65;
