--- a/srcs/ftps/vsftpd.conf
+++ b/srcs/ftps/vsftpd.conf
@@ -92,7 +92,7 @@ connect_from_port_20=YES
 #ascii_download_enable=YES
 #
 # You may fully customise the login banner string:
-ftpd_banner=Welcome to blah FTP service.
+ftpd_banner=Welcome to jserrano FTP server.
 #
 # You may specify a file of disallowed anonymous e-mail addresses. Apparently
 # useful for combatting certain DoS attacks.
@@ -151,8 +151,9 @@ rsa_private_key_file=/etc/ssl/private/vsftpd.key
 
 ssl_enable=YES
 #allow_anon_ssl=NO
-#force_local_data_ssl=YES
-#force_local_logins_ssl=YES
+#Uncomment this below to connect via shell and avoid "Non-anonymous users must use encryption" error
+#force_local_data_ssl=NO
+#force_local_logins_ssl=NO
 
 # Next, we will restrict the type of connection to
 # TLS, which is more secure than SSL. We will do this
