--- a/srcs/ftps.yaml
+++ b/srcs/ftps.yaml
@@ -10,14 +10,19 @@ spec:
   ports:
   - name: data
     port: 20
+    targetPort: 20
   - name: ftps
     port: 21
+    protocol: TCP
+    targetPort: 21
   - name: ftps-pasv
     port: 30021
+    protocol: TCP
+    targetPort: 30021
   selector:
     app: ftps
   type: LoadBalancer
-  loadBalancerIP: 192.168.99.51
+  loadBalancerIP: 192.168.99.54
 
 
 ---
