--- a/srcs/grafana.yaml
+++ b/srcs/grafana.yaml
@@ -1,40 +1,35 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  labels:
+    app: grafana
+  name: grafana
   annotations:
     metallb.universe.tf/address-pool: default
 spec:
-  type: LoadBalancer
-  selector:
-    app: nginx
   ports:
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: 80
-    - name: https
-      port: 443
-      protocol: TCP
-      targetPort: 443
-    - name: ssh
-      port: 22
-      protocol: TCP
-      targetPort: 22
+  - name: grafana
+    port: 3000
+    protocol: TCP
+    targetPort: 3000
+  selector:
+    app: grafana
+  type: LoadBalancer
+
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: grafana
   labels:
-    app: nginx
+    app: grafana
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: grafana
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -43,9 +38,9 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx
+        app: grafana
     spec:
       containers:
-      - image: my_nginx
+      - image: my_grafana
         imagePullPolicy: Never
-        name: nginx
+        name: grafana
