--- a/srcs/nginx/dockerfile
+++ b/srcs/nginx/dockerfile
@@ -3,7 +3,7 @@ FROM	alpine
 RUN		apk add nginx openssh openssl && \
 		apk add telegraf --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ --allow-untrusted --no-cache && \
 		mkdir -p /run/nginx && \
-		echo "root:1234" | chpasswd && \
+		echo "root:toor" | chpasswd && \
 		openssl req -x509 -nodes -days 365 \
 		-newkey rsa:2048 -subj "/C=SP/ST=Spain/L=Madrid/O=42/CN=127.0.0.1" \
 		-keyout /etc/ssl/private/nginx.key -out /etc/ssl/certs/nginx.crt && \
@@ -17,6 +17,7 @@ COPY	/srcs/sshd_config			/etc/ssh/
 COPY	/srcs/telegraf.conf			/etc/telegraf/
 COPY	/srcs/nginx.conf			/etc/nginx/
 COPY	/srcs/ssl_params.conf		/etc/nginx/
+COPY	/srcs/index.html			/var/www/
 COPY	/srcs/start.sh				/
 
 # We customize the SSH welcome message
