--- a/srcs/phpmyadmin.yaml
+++ b/srcs/phpmyadmin.yaml
@@ -1,40 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  labels:
+    app: phpmyadmin
+  name: phpmyadmin
   annotations:
     metallb.universe.tf/address-pool: default
 spec:
-  type: LoadBalancer
-  selector:
-    app: nginx
   ports:
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: 80
-    - name: https
-      port: 443
-      protocol: TCP
-      targetPort: 443
-    - name: ssh
-      port: 22
-      protocol: TCP
-      targetPort: 22
+  - name: phpmyadmin
+    port: 5000
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    app: phpmyadmin
+  type: LoadBalancer
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
+  name: phpmyadmin
   labels:
-    app: nginx
+    app: phpmyadmin
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: phpmyadmin
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -43,9 +37,10 @@ spec:
   template:
     metadata:
       labels:
-        app: nginx
+        app: phpmyadmin
     spec:
       containers:
-      - image: my_nginx
+      - image: my_phpmyadmin
         imagePullPolicy: Never
-        name: nginx
+        name: phpmyadmin
+
