--- a/srcs/wordpress.yaml
+++ b/srcs/wordpress.yaml
@@ -1,40 +1,34 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  labels:
+    app: wordpress
+  name: wordpress
   annotations:
     metallb.universe.tf/address-pool: default
 spec:
-  type: LoadBalancer
-  selector:
-    app: nginx
   ports:
-    - name: http
-      port: 80
-      protocol: TCP
-      targetPort: 80
-    - name: https
-      port: 443
-      protocol: TCP
-      targetPort: 443
-    - name: ssh
-      port: 22
-      protocol: TCP
-      targetPort: 22
+  - name: wordpress
+    port: 5050
+    protocol: TCP
+    targetPort: 5050
+  selector:
+    app: wordpress
+  type: LoadBalancer
 
 ---
 
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx
   labels:
-    app: nginx
+    app: wordpress
+  name: wordpress
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: wordpress
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -42,10 +36,13 @@ spec:
     type: RollingUpdate
   template:
     metadata:
+      creationTimestamp: null
       labels:
-        app: nginx
+        app: wordpress
     spec:
       containers:
-      - image: my_nginx
+      - image: my_wordpress
         imagePullPolicy: Never
-        name: nginx
+        name: wordpress
+        ports:
+        - containerPort: 5050
