--- a/srcs/grafana.yaml
+++ b/srcs/grafana.yaml
@@ -10,12 +10,10 @@ spec:
   ports:
   - name: grafana
     port: 3000
-    protocol: TCP
-    targetPort: 3000
   selector:
     app: grafana
   type: LoadBalancer
-
+  loadBalancerIP: 192.168.99.52
 
 ---
 
@@ -30,11 +28,6 @@ spec:
   selector:
     matchLabels:
       app: grafana
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
       labels:
