--- a/srcs/nginx.yaml
+++ b/srcs/nginx.yaml
@@ -5,22 +5,17 @@ metadata:
   annotations:
     metallb.universe.tf/address-pool: default
 spec:
-  type: LoadBalancer
   selector:
     app: nginx
   ports:
     - name: http
       port: 80
-      protocol: TCP
-      targetPort: 80
     - name: https
       port: 443
-      protocol: TCP
-      targetPort: 443
     - name: ssh
       port: 22
-      protocol: TCP
-      targetPort: 22
+  type: LoadBalancer
+  loadBalancerIP: 192.168.99.50
 
 ---
 
@@ -35,11 +30,6 @@ spec:
   selector:
     matchLabels:
       app: nginx
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
       labels:
