--- a/srcs/nginx/dockerfile
+++ b/srcs/nginx/dockerfile
@@ -9,8 +9,6 @@ RUN		apk add nginx openssh openssl && \
 		-keyout /etc/ssl/private/nginx.key -out /etc/ssl/certs/nginx.crt && \
 		openssl dhparam -dsaparam -out /etc/ssl/certs/dhparam.pem 2048
 
-# Allow ssh conexion (ssh-keygen option -A: for each of the key types for which host keys do not exist,
-# generate the host keys witch the default key file path, an empty passphrase, default bits for the key type, and deafault comment).
 RUN		ssh-keygen -A
 
 COPY	/srcs/sshd_config			/etc/ssh/
@@ -20,8 +18,7 @@ COPY	/srcs/ssl_params.conf		/etc/nginx/
 COPY	/srcs/index.html			/var/www/
 COPY	/srcs/start.sh				/
 
-# We customize the SSH welcome message
-RUN		echo 'Welcome to SSH of nginx by parmarti' > /etc/motd
+RUN		echo 'Welcome to SSH of nginx by jserrano' > /etc/motd
 
 EXPOSE	80 443 22
 
