--- a/srcs/wordpress.yaml
+++ b/srcs/wordpress.yaml
@@ -10,11 +10,10 @@ spec:
   ports:
   - name: wordpress
     port: 5050
-    protocol: TCP
-    targetPort: 5050
   selector:
     app: wordpress
   type: LoadBalancer
+  loadBalancerIP: 192.168.99.54
 
 ---
 
@@ -29,11 +28,6 @@ spec:
   selector:
     matchLabels:
       app: wordpress
-  strategy:
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
-    type: RollingUpdate
   template:
     metadata:
       creationTimestamp: null
