--- a/srcs/mysql/Dockerfile
+++ b/srcs/mysql/Dockerfile
@@ -1,4 +1,4 @@
-FROM	alpine
+FROM	alpine:3.12
 
 RUN		apk add mariadb mariadb-client && \
 		apk add telegraf --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ --allow-untrusted --no-cache && \
