--- a/srcs/phpmyadmin/Dockerfile
+++ b/srcs/phpmyadmin/Dockerfile
@@ -1,4 +1,4 @@
-FROM	alpine
+FROM	alpine:3.12
 
 RUN		apk add wget php7 php7-fpm php7-mysqli php7-mbstring php7-json php7-session && \
 		apk add telegraf --repository http://dl-cdn.alpinelinux.org/alpine/edge/community/ --allow-untrusted --no-cache && \
